initial header css draft done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap" rel="stylesheet">
+    <!-- google fonts -->
     <title>cv-portfolio</title>
 </head>
 <body>
@@ -37,8 +42,8 @@
             </ul>
         </nav>
 
-        <section class="header-intro">
-            <p>Hi, my name is 
+        <section id="header-intro">
+            <p class="name">Hi, my name is 
                 <span>Bob Kindgren.</span>
             </p>
             <h2>I explore the web.</h2>
@@ -49,7 +54,7 @@
         </section>
     </header>
 
-    <main>
+    <!-- <main>
         <section id="projects">
             <h2>Projects I am proud of </h2>
             <article>
@@ -91,6 +96,6 @@
         <p>
             <small>&copy 2021 Bob Kindgren. All rights reserved.</small>
         </p>
-    </footer>
+    </footer> -->
 </body>
 </html>
