initial footer css draft

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>
             <a href="">Email me</a>
         </p>
-    </section>
+    </section> -->
 
     <footer>
         <h2>Bob Kindgren : Front End Developer</h2>
@@ -87,15 +87,15 @@
                 <a href="">Linkedin</a>
             </li>
             <li>
-                <a href="Github"></a>
+                <a href="">Github</a>
             </li>
             <li>
-                <a href="Mail"></a>
+                <a href="">Mail</a>
             </li>
         </ul>
         <p>
             <small>&copy 2021 Bob Kindgren. All rights reserved.</small>
         </p>
-    </footer> -->
+    </footer> 
 </body>
 </html>
