initial contact section draft

--- a/index.html
+++ b/index.html
@@ -70,15 +70,16 @@
                 <img src="" alt="Image of the project Digi Waka">
             </article>
         </section>
-    </main>
-
-    <section id="contact">
-        <h2>Contact me</h2>
-        <p>I'm always interested in hearing about new learning opportunities, creating something, or potential work offerings.</p>
-        <p>
-            <a href="">Email me</a>
-        </p>
-    </section> -->
+    </main> -->
+    <div class="contact-wrapper">
+        <section id="contact">
+            <h2>Contact me</h2>
+            <p>I'm always interested in hearing about new learning opportunities, creating something, or potential work offerings.</p>
+            <p>
+                <a href="">Email me</a>
+            </p>
+        </section>
+    </div>
 
     <footer>
         <h2>Bob Kindgren : Front End Developer</h2>
