--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="#">Contact</a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/bob-oskar-kindgren-84997a1a6/" target="_blank">
                         <!-- kolla upp detta. Varför har jag gjort som jag gjort? -->
                         <span class="fa-brands fa-linkedin" aria-hidden="true"></span>
                         <span class="sr-only">LinkedIn</span>
@@ -90,7 +90,7 @@
             <h2>Contact me</h2>
             <p>I'm always interested in hearing about new learning opportunities, creating something, or potential work offerings.</p>
             <p>
-                <a href="#" class="button" target="_blank">Email me</a>
+                <a href="mailto:kindgren.boboskar@gmail.com" class="button" target="_blank">Email me</a>
             </p>
         </section>
     </div>
@@ -100,13 +100,22 @@
         <h2>Bob Kindgren : Front End Developer</h2>
         <ul>
             <li>
-                <a href="#">Linkedin</a>
+                <a href="https://www.linkedin.com/in/bob-oskar-kindgren-84997a1a6/" target="_blank">
+                    <span class="fa-brands fa-linkedin" aria-hidden="true"></span>
+                    <span class="sr-only">LinkedIn</span>
+                </a>
             </li>
             <li>
-                <a href="#">Github</a>
+                <a href="https://github.com/boboskarkindgren" target="_blank">
+                    <span class="fa-brands fa-square-github" aria-hidden="true"></span>
+                    <span class="sr-only">Github</span>
+                </a>
             </li>
             <li>
-                <a href="#">Mail</a>
+                <a href="mailto:kindgren.boboskar@gmail.com">
+                    <Span class="fa-solid fa-envelope"></Span>
+                    <Span class="sr-only">Email</Span>
+                </a>
             </li>
         </ul>
         <p>
