icons and buttons good draft

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                     </h1>
                 </li>
                 <li>
-                    <a href="#">Projects</a>
+                    <a href="#projects">Projects</a>
                 </li>
                 <li>
                     <a href="#">About</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#contact">Contact</a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/bob-oskar-kindgren-84997a1a6/" target="_blank">
