icons color and hover

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
             <ul>
                 <li>
                     <h1>
-                        <a href="#">Bob Kindgren</a>
+                        <a href="index.html">
+                        <span class="fa-solid fa-crown" aria-hidden="true"></span>
+                        <span>Bob Kindgren</span>
+                        </a>
                     </h1>
                 </li>
                 <li>
