--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <article>
                 <div class="projects-text">
                     <h4>Latest project</h4>
-                    <h3>Digi Waka</h3>
+                    <h3>Bungy</h3>
                     <p class="projects-text-box">Description of the project. This should be fairly concise while also describing the key components that you developed or worked on. It can be as long as you need it to be but should at least be a few sentences long. Be sure to include specific links anywhere in the description. A link looks like this, and multiple links look like this and like this.</p>
                     <h4>Technologies used include this project:</h4>
                     <ul>
@@ -83,6 +83,36 @@
                     </ul>
                 </div>
                 <img src="img/bungy.JPG" alt="Image of the project Digi Waka">
+            </article>
+
+            <article>
+                <div class="projects-text">
+                    <h4>Latest project</h4>
+                    <h3>Digi Waka</h3>
+                    <p class="projects-text-box">Description of the project. This should be fairly concise while also describing the key components that you developed or worked on. It can be as long as you need it to be but should at least be a few sentences long. Be sure to include specific links anywhere in the description. A link looks like this, and multiple links look like this and like this.</p>
+                    <h4>Technologies used include this project:</h4>
+                    <ul>
+                        <li>Html</li>
+                        <li>Css</li>
+                        <li>Svg</li>
+                    </ul>
+                </div>
+                <img src="img/color.jpg" alt="Image of the project Digi Waka">
+            </article>
+
+            <article>
+                <div class="projects-text">
+                    <h4>Latest project</h4>
+                    <h3>Baby</h3>
+                    <p class="projects-text-box">Description of the project. This should be fairly concise while also describing the key components that you developed or worked on. It can be as long as you need it to be but should at least be a few sentences long. Be sure to include specific links anywhere in the description. A link looks like this, and multiple links look like this and like this.</p>
+                    <h4>Technologies used include this project:</h4>
+                    <ul>
+                        <li>Html</li>
+                        <li>Css</li>
+                        <li>Svg</li>
+                    </ul>
+                </div>
+                <img src="img/baby.jpg" alt="Image of the project Digi Waka">
             </article>
         </section>
     </main>
