--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
                         <li>Svg</li>
                     </ul>
                 </div>
-                <img src="img/bungy.JPG" alt="Image of the project Digi Waka">
+                <!-- bild är större i mobilvy än desktop. I network ser der ut som att alla bilder laddas?. Hmm.?? -->
+                <img src="img/bungy-800.jpg" 
+                     alt="Image of Bob jumping Bungy jump from a bridge"
+                     srcset="img/bungy-800.jpg 800w, img/bungy-600.jpg 600w"
+                     sizes="(max-width: 760px) 800px, 600px">
+                     
             </article>
 
             <article>
@@ -97,7 +102,10 @@
                         <li>Svg</li>
                     </ul>
                 </div>
-                <img src="img/color.jpg" alt="Image of the project Digi Waka">
+                <img src="img/color-800.jpg" 
+                     alt="Image of mixed intense colors"
+                     srcset="img/color-600.jpg 600w, img/color-800.jpg 800w"
+                     sizes="(max-width: 760px) 800px, 600px">
             </article>
 
             <article>
@@ -112,7 +120,10 @@
                         <li>Svg</li>
                     </ul>
                 </div>
-                <img src="img/baby.jpg" alt="Image of the project Digi Waka">
+                <img src="img/baby-800.jpg" 
+                     alt="Image of Bob and his future child"
+                     srcset="img/baby-600.jpg 600w, img/baby-800.jpg 800w"
+                     sizes="(max-width: 760px) 800px, 600px">
             </article>
         </section>
     </main>
