Starting media queries

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <li>Svg</li>
                     </ul>
                 </div>
-                <!-- bild är större i mobilvy än desktop. I network ser der ut som att alla bilder laddas?. Hmm.?? -->
+                <!-- bild är större i mobilvy än desktop. I network ser der ut som att alla bilder laddas vid bredd över 760?. Hmm.?? -->
                 <img src="img/bungy-800.jpg" 
                      alt="Image of Bob jumping Bungy jump from a bridge"
                      srcset="img/bungy-800.jpg 800w, img/bungy-600.jpg 600w"
