--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- rätt ordning? -->
+    <title>Best Frontend Developer CV/Portfolio 2022 - HTML, CSS, Javascript</title>
+    <meta name="description" content="Get free consultation from Bob Kindgren, a higly skilled Frontend developer student. Specialized in HTML, CSS and Javascript. ">
+    <meta name="keywords" content="Fronten Developer, HTML, CSS, JavaScript, Medieinstitutet, Web Developer, Best, Free">
+    <meta name="author" content="Bob Kindgren">
     <link rel="stylesheet" href="css/style.css">
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap" rel="stylesheet">
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/00ff373c81.js" crossorigin="anonymous"></script>
-    <title>cv-portfolio</title>
+    
 </head>
 <body>
     <header>
