--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- rätt ordning? -->
     <title>Best Frontend Developer CV/Portfolio 2022 - HTML, CSS, Javascript</title>
     <meta name="description" content="Get free consultation from Bob Kindgren, a higly skilled Frontend developer student. Specialized in HTML, CSS and Javascript. ">
-    <meta name="keywords" content="Fronten Developer, HTML, CSS, JavaScript, Medieinstitutet, Web Developer, Best, Free">
+    <meta name="keywords" content="Fronten Developer, HTML, CSS, JavaScript, Medieinstitutet, Web Developer, Best, Free, Portfolio, CV">
     <meta name="author" content="Bob Kindgren">
     <link rel="stylesheet" href="css/style.css">
     <!-- google fonts -->
