Card flip responsive

--- a/index.html
+++ b/index.html
@@ -68,6 +68,19 @@
             <p>Currently I am working on my portfolio, including
                 <a href="">my projects.</a>
             </p>
+
+            <!-- test flipping card-->
+            <div class="flipping-card-container">
+                <div class="card">
+                    <div class="front">
+                        <h1>Hover me!</h1>
+                    </div>
+                    <div class="back">
+                        <img src="img/pinguin.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+
         </section>
     </header>
     <!-- gradient line -->
