--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <div class="card-container">
+    <div class="flipping-card-container">
         <div class="card">
             <div class="front">
                 <h1>Hello</h1>
