--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                      
             </article>
 
-            <article>
+            <article class="reverse">
                 <div class="projects-text">
                     <h4>Latest project</h4>
                     <h3>Digi Waka</h3>
