--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <main>
         <section id="projects">
             <h2>Projects I am proud of </h2>
+            <!-- lägg in abbr på förkortningar för tillgänglighet -->
             <article>
                 <div class="projects-text">
                     <h4>Latest project</h4>
@@ -137,7 +138,7 @@
                     <p class="projects-text-box">Description of the project. This should be fairly concise while also describing the key components that you developed or worked on. It can be as long as you need it to be but should at least be a few sentences long. Be sure to include specific links anywhere in the description. A link looks like this, and multiple links look like this and like this.</p>
                     <h4>Technologies used include this project:</h4>
                     <ul>
-                        <li>Html</li>
+                        <li><abbr title="Hyper Text Markup Language">HTML</abbr></li>
                         <li>Css</li>
                         <li>Svg</li>
                     </ul>
