--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     </h1>
                 </li>
                 <li>
+                    <!-- Jag ska ändra ID här. Dock inte helt bestämt mig för achievements -->
                     <a href="#projects">Achievements</a>
                 </li>
                 <li>
@@ -58,7 +59,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="button" target="_blank">Resume</a>
+                    <a href="resume.html" class="button" target="_blank">Resumé</a>
                 </li>
             </ul>
         </nav>
@@ -67,10 +68,10 @@
             <p class="name">Hi, my name is 
                 <span>Bob Kindgren.</span>
             </p>
-            <h2>I explore the web.</h2>
+            <h2>I will succeed.</h2>
             <p>I am a Front End Developer student, specializing in <abbr title="Hyper Text Markup Language">Html</abbr>, <abbr title="Cascading Style Sheets">Css</abbr> and JavaScript.</p>
             <p>Currently I am working on my portfolio, including
-                <a href="">my Achievements.</a>
+                <a href="#projects">my achievements.</a>
             </p>
 
             <!-- test flipping card-->
