Links in project section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <h4>Latest project</h4>
                     <h3>Digi Waka</h3>
                     <p class="projects-text-box">My future, professional alias will be Digi Waka. An agency with a culture of happiness, freedom and professionalism.
-                        Colorful creations will be our signature. Do you want to <a href="mailto:kindgren.boboskar@gmail.com">Join?</a>
+                        Colorful creations will be our signature.<a href="mailto:kindgren.boboskar@gmail.com">Do you want to Join?</a>
                 
                     </p>
                     <h4>Technologies used include this project:</h4>
