Klar för inlämning

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Get free consultation from Bob Kindgren, a higly skilled Frontend developer student. Specialized in HTML, CSS and Javascript. ">
     <meta name="keywords" content="Fronten Developer, HTML, CSS, JavaScript, Medieinstitutet, Web Developer, Best, Free, Portfolio, CV">
     <meta name="author" content="Bob Kindgren">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
