--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <ul>
                         <li><abbr title="Hyper Text Markup Language"><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">Html</a></abbr></li>
                         <li> <abbr title="Cascading Style Sheets"><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">Css</a></abbr></li>
-                        <li> <abbr title="Grid Layout Module"><li> <abbr title="Cascading Style Sheets"><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/grid" target="_blank">Grid</a></abbr></li></abbr></li>
+                        <li> <abbr title="Grid Layout Module"><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/grid" target="_blank">Grid</a></abbr></li>
                     </ul>
                 </div>
                 <img 
