--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="flipping-card-container">
                 <div class="card">
                     <div class="front">
-                        <h1>Hover me!</h1>
+                        <h1>Try me!</h1>
                     </div>
                     <div class="back">
                         <img src="img/pinguin.jpg" alt="">
