--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <div class="flipping-card-container">
                 <div class="card">
                     <div class="front">
+                        <!-- ändra här så det blir text "hover me!"" på desktop och "push me!"" i mobile -->
                         <h1>Try me!</h1>
                     </div>
                     <div class="back">
