--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body id="body">
     
     <header>
+        <p>test av git</p>
         <div class="header-crown">
             <span class="fa-solid fa-crown" aria-hidden="true"></span>
             <span class="fa-solid fa-crown" aria-hidden="true"></span>
