added oskar to index

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <h1>
                         <a href="index.html">
                         <span class="fa-solid fa-crown" aria-hidden="true"></span>
-                        <span>Bob Kindgren</span>
+                        <span>Bob Oskar Kindgren</span>
                         </a>
                     </h1>
                 </li>
