--- a/resume.html
+++ b/resume.html
@@ -58,7 +58,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="button" target="_blank">Resumé</a>
+                    <a href="#" class="button" target="_blank">CV/Resumé</a>
                 </li>
             </ul>
         </nav>
@@ -66,14 +66,14 @@
     
     <section class="resume">
         <h2>
-            Resumé
+            CV/Resumé
         </h2>
 
         <object data="assets/resume.pdf" 
                 type="applicsation/pdf" 
                 width="300" 
                 height="400">
-            <a href="assets/resume.pdf" target="_blank">resume.pdf</a>
+            <a href="pdf/CV-Bob Oskar Kindgren.pdf" target="_blank">CV/Resumé.pdf</a>
         </object>
 
 
