Added cv to resume

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="resume.html" class="button" target="_blank">Resumé</a>
+                    <a href="resume.html" class="button" target="_blank"><CV>CV/Resumé</a>
                 </li>
             </ul>
         </nav>
