--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="projects-text">
                     <h4>Latest project</h4>
                     <h3>BAM Candyshop</h3>
-                    <p class="projects-text-box">A project that was a part of three different courses: agile project work, work methodology for developers and javascript 1.
+                    <p class="projects-text-box">A project that was a part of three different courses: agile project work, work methodology for developers and javascript 1. <br><br>
                         Together with three fellow student we created a simple candy webshop that connects with an API. Instead of Javascript we choose to use Typescript for this project. For testing the API we used Postman. For the project planning we tried the Github tool, Github Projects. We worked Agile with continuous sprints, reviews and meetings with product owner. 
                         <a href="https://github.com/albinario/BAM-candyshop" target="_blank">Take a look at the project on my Github!</a>
                 
